💄 add paddng to avoid shadow overflow

--- a/src/renderer/ui/components/inputs/input_container/style/index.scss
+++ b/src/renderer/ui/components/inputs/input_container/style/index.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: stretch;
     gap: 10px;
-
+    padding: 0 1px;
     > span{
         text-overflow: ellipsis;
         white-space: nowrap;
